...
                    onFocus={onSearchInputFocus}
                    onChangeText={onChangeText}
                    onClearText={onPressClearQuery}
                    onSubmitEditing={onSubmit}
                    placeholder={
                      (inputPlaceholder ?? searchType === 'all')
                        ? _(msg`Search for posts, users, or feeds`)
                        : _(msg`Search for recipes`)
                    }
                    hitSlop={{...HITSLOP_20, top: 0}}
                  />
                </View>
                {showAutocomplete && (
...
