...
          </View>

          <View
            testID="signinOrCreateAccount"
            style={[a.px_xl, a.gap_md, a.pb_2xl]}>
            <Button
              testID="createAccountButton"
              onPress={() => {
                onPressCreateAccount()
                playHaptic('Light')
              }}
              label={_(msg`Create new account`)}
              accessibilityHint={_(
...
