appId: xyz.mysky.app
---
- runScript:
    file: ../setupServer.js
    env:
        SERVER_PATH: "?users&follows&labels"
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"

# create a modlist
- tapOn:
    id: "e2eGotoModeration"
- tapOn:
    id: "moderationlistsBtn"
- tapOn: "New list"
- tapOn:
    id: "editNameInput"
- inputText: "Muted Users"
- tapOn:
    id: "editDescriptionInput"
- inputText: "Shhh"
- tapOn: "Save"
- tapOn: "Save"

# view modlist
- assertVisible: "Muted Users"
- assertVisible: "Shhh"

- tapOn:
    label: "Dropdown"
    point: "71%,9%"

- tapOn: "Mute accounts"
- tapOn: "Mute list"
- tapOn: "Unmute"

- tapOn:
      label: "Dropdown"
      point: "71%,9%"

- tapOn: "Block accounts"
- tapOn: "Block list"
- tapOn: "Unblock"

 # the rest of the behaviors are tested in curate-lists.yml
